duvet/src/comment/snapshots/duvet__comment__tests__content_without_meta.snap
---
source: duvet/src/comment/tests.rs
expression: "parse(\"//=,//#\", r#\"\n    //# This is some content without meta\n    \"#)"
---
(
    {},
    [],
)
