duvet/src/comment/snapshots/duvet__comment__tests__type_exception_multiline_reason.snap
---
source: duvet/src/comment/tests.rs
assertion_line: 129
expression: "parse(\"//@=,//@#\",\nr#\"\n    //@= https://example.com/spec.txt\n    //@= type=exception\n    //@= reason=There's a lot to justify here,\n    //@= reason=so this reason needs to be split across two\n    //@= reason=or even three lines.\n    //@# Before encrypting input plaintext,\n    \"#)"
---
(
    {
        Annotation {
            source: "file.rs",
            anno_line: 2,
            original_target: "https://example.com/spec.txt",
            original_text: "https://example.com/spec.txt\n    //@= type=exception\n    //@= reason=There's a lot to justify here,\n    //@= reason=so this reason needs to be split across two\n    //@= reason=or even three lines.\n    //@# Before encrypting input plaintext,",
            original_quote: "Before encrypting input plaintext,",
            anno: Exception,
            target: "https://example.com/spec.txt",
            quote: "Before encrypting input plaintext,",
            comment: "There's a lot to justify here, so this reason needs to be split across two or even three lines.",
            manifest_dir: "[CWD]",
            level: Auto,
            format: Auto,
            tracking_issue: "",
            feature: "",
            tags: {},
            blob_link: None,
        },
    },
    [],
)
