duvet/src/comment/snapshots/duvet__comment__tests__type_test_with_reason.snap
---
source: duvet/src/comment/tests.rs
assertion_line: 119
expression: "parse(\"//@=,//@#\",\nr#\"\n    //@= https://example.com/spec.txt\n    //@= type=test\n    //@= reason=Validates the encryption step ordering\n    //@# Here is my citation\n    \"#)"
---
(
    {
        Annotation {
            source: "file.rs",
            anno_line: 2,
            original_target: "https://example.com/spec.txt",
            original_text: "https://example.com/spec.txt\n    //@= type=test\n    //@= reason=Validates the encryption step ordering\n    //@# Here is my citation",
            original_quote: "Here is my citation",
            anno: Test,
            target: "https://example.com/spec.txt",
            quote: "Here is my citation",
            comment: "Validates the encryption step ordering",
            manifest_dir: "[CWD]",
            level: Auto,
            format: Auto,
            tracking_issue: "",
            feature: "",
            tags: {},
            blob_link: None,
        },
    },
    [],
)
