duvet/src/comment/snapshots/duvet__comment__tests__type_todo.snap
---
source: duvet/src/comment/tests.rs
assertion_line: 70
expression: "parse(\"//@=,//@#\",\nr#\"\n    //@= https://example.com/spec.txt\n    //@= type=todo\n    //@= feature=cool-things\n    //@= tracking-issue=123\n    //@# Here is my citation\n    \"#)"
---
(
    {
        Annotation {
            source: "file.rs",
            anno_line: 2,
            original_target: "https://example.com/spec.txt",
            original_text: "https://example.com/spec.txt\n    //@= type=todo\n    //@= feature=cool-things\n    //@= tracking-issue=123\n    //@# Here is my citation",
            original_quote: "Here is my citation",
            anno: Todo,
            target: "https://example.com/spec.txt",
            quote: "Here is my citation",
            comment: "",
            manifest_dir: "[CWD]",
            level: Auto,
            format: Auto,
            tracking_issue: "123",
            feature: "cool-things",
            tags: {},
            blob_link: None,
        },
    },
    [],
)
